Made bug fixes for various distorted graphics Files modified - [MunicipalitySettings.html,MyProfile.html,MunicipalitySettings.css,Forms.css,ResetPassword.html,Forms.html,MyProfile.css]

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.css
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.css
@@ -1,3 +1,10 @@
 .pcolor{
     background-color:#e3e1e1 !important;
 }
+
+.municipality-logo {
+    max-width: 300px;
+    max-height: 300px;
+    width: auto !important;
+    height: auto !important;
+}
